[package]
name = "pss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
indicatif = "0.17.1"
oss-rust-sdk = "0.5.0"
config = { version = "0.13.1", features = ["json", "toml"] }
lazy_static = "1.4.0"
